<resources>
    <string name="app_name">VARSE</string>
    <string name="app_name_desc">VARiability for Studying Emotions</string>

    <!-- Actions -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Labels -->
    <string name="lblUser">User</string>
    <string name="lblUsers">Users</string>
    <string name="lblAddUser">Add user</string>
    <string name="lblEditUser">Edit user</string>

    <string name="lblDeviceScan">Device Scan</string>
    <string name="lblDevices">Devices</string>
    <string name="lblHRNotSupported">hr not supported by device</string>
    <string name="lblRRNotSupported">rr not supported by device</string>

    <string name="lblExperiments">Experiments</string>
    <string name="lblExperiment">Experiment</string>
    <string name="lblPerformExperiment">Perform experiment</string>
    <string name="lblTestHrBtDevice">Test HR BT</string>
    <string name="lblEditExperiment">Edit experiment</string>
    <string name="lblDeleteExperiment">Delete experiment</string>

    <string name="lblResults">Results</string>
    <string name="lblResult">Result</string>

    <string name="lblExport">Export</string>
    <string name="lblImport">Import</string>
    <string name="lblComms">Communications</string>
    <string name="lblBack">Back</string>
    <string name="lblName">Name</string>
    <string name="lblDelete">Delete</string>

    <string name="lblGroupManual">Manual group</string>
    <string name="lblGroupVideos">Videos group</string>
    <string name="lblGroupImages">Images group</string>
    <string name="lblDuration">Duration</string>
    <string name="lblMediaFiles">Media files</string>
    <string name="lblMediaSelection">Select media</string>
    <string name="lblSortUp">Sort up</string>
    <string name="lblSortDown">Sort down</string>
    <string name="lblLaunch">Launch</string>
    <string name="lblEditGroup">Edit group</string>
    <string name="lblEditActivity">Edit activity</string>
    <string name="lblEditManualActivity">Edit manual activity</string>
    <string name="lblGroups">Groups</string>
    <string name="lblNoEntries">No entries</string>
    <string name="lblActivities">Activities</string>
    <string name="lblAddActivity">Add activity</string>
    <string name="lblAddGroup">Add group</string>
    <string name="lblRandomOrder">Random</string>
    <string name="lblDemo">Demo</string>
    <string name="lblTag">Tag</string>
    <string name="lblRefresh">Refresh</string>
    <string name="lblStartScan">Start scan</string>
    <string name="lblStopScan">Stop scan</string>
    <string name="lblActivateBluetooth">Please activate Bluetooth</string>
    <string name="lblDevicesCleared">All devices cleared</string>
    <string name="lblDeviceFound">Device found</string>
    <string name="lblDevice">Device</string>
    <string name="lblFilteringByService">Checking services</string>
    <string name="lblConnected">Connected</string>
    <string name="lblDisconnected">Disconnected</string>
    <string name="lblRecord">Record</string>
    <string name="lblBpm">bpm</string>
    <string name="lblRR">rr</string>
    <string name="lblYes">Yes</string>
    <string name="lblNo">No</string>
    <string name="lblSave">Save</string>
    <string name="lblCancel">Cancel</string>
    <string name="lblDefaultTag">default</string>
    <string name="lblUpload">Cloud backup</string>
    <string name="lblRecovery">Recovery</string>
    <string name="lblPermissionsNeeded">Permissions needed</string>
    <string name="lblLegal">Legal</string>
    <string name="lblPrivacyPolicy">Privacy policy</string>
    <string name="lblTemplates">Templates</string>
    <string name="lblData">Data</string>
    <string name="lblGraphic">Graphic</string>
    <string name="lblPleasant">Pleasant</string>
    <string name="lblUnpleasant">Unpleasant</string>
    <string name="lblNeutral">Neutral</string>
    <string name="lblNewExperiment">+ create new experiment</string>
    <string name="lblLink">Link to cloud</string>
    <string name="lblEmail">e.Mail</string>

    <string name="msgAreYouSure">Are you sure?</string>
    <string name="msgResettingSettings">Resetting settings</string>
    <string name="msgLoseData">You will lose all unsaved data</string>
    <string name="msgFileNotFound">File not found</string>
    <string name="msgIncompatibleMedia">Incompatible media</string>
    <string name="msgMediaAlreadyAdded">Media already added</string>
    <string name="msgStandby">Standby</string>
    <string name="msgReadingHR">Reading HR</string>
    <string name="msgExported">Data set exported</string>
    <string name="msgImported">Data set imported</string>
    <string name="msgFinishedExperiment">Experiment performed</string>
    <string name="msgFinishedBackup">Backup finished</string>
    <string name="msgFinishedRecovery">Recovery finished</string>
    <string name="msgForceCloudBackup">Force backup to the cloud.</string>
    <string name="msgWaitForBackup">Please wait until backup is finished.</string>
    <string name="msgRecovery">Recovery from the cloud</string>
    <string name="msgReportPermissionsNeeded">
        This app needs Bluetooth connectivity, in order to achieve
        its objective of measuring heart rate variability.
        You are going to be asked next for permissions to enable, scan,
        and connect to health devices through Bluetooth LE.
        Please grant these permissions to be able to use the
        whole functionality of the app; otherwise, you will only be able
        to test the app through a demo device.
    </string>
    <string name="msgTemplateRuffiusPhase1">Stay seated.</string>
    <string name="msgTemplateRuffiusPhase2">Thirty squats in forty five seconds.</string>
    <string name="msgTemplateRuffiusPhase3">Go back to sitting position.</string>
    <string name="msgTemplateDefaultPhase1">Collection will start momentarily.</string>
    <string name="msgTemplateDefaultPhase2">Relax.</string>
    <string name="msgTemplateDefaultPhase3">Please stand by…</string>
    <string name="msgTemplateQuick">Collecting data…</string>

    <!-- Errors -->
    <string name="errStore">Unable to initialise storage</string>
    <string name="errIO">Input/output error</string>
    <string name="errDeleting">Error deleting from storage</string>
    <string name="errExport">Error exporting</string>
    <string name="errBlocked">Blocked in error state</string>
    <string name="errNoBluetooth">Bluetooth is not supported</string>
    <string name="errNoBluetoothPermissions">Not enough permissions to access Bluetooth</string>
    <string name="errScanFailed">BlueTooth device scan failed</string>
    <string name="errUnknownDevice">Unknown device</string>
    <string name="errNoHR">No health profile detected</string>
    <string name="errNoUsr">No record name given</string>
    <string name="errNoExperiment">No experiment chosen</string>
    <string name="errPermissionDenied">Permission denied</string>
    <string name="errUnsupportedFileType">Unsupported file type</string>
    <string name="errIncorrectDuration">"Incorrect duration"</string>
    <string name="errUnableToShowActivity">Unable to show activity</string>
    <string name="errNotEnoughActivities">Not enough activities</string>
    <string name="errInitializingSettings">Initializing settings</string>
    <string name="errCloudEmailNotSet">e.Mail is not set</string>
    <string name="errAnotherCloudOpRunning">Another cloud operation is running</string>

    <!-- Choices for time units -->
    <string name="lblMinutes">Minutes</string>
    <string name="lblSeconds">Seconds</string>
    <string-array name="vTimeUnitChoices">
        <item>@string/lblSeconds</item>
        <item>@string/lblMinutes</item>
    </string-array>
</resources>
