<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ResultsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

        <ImageButton
            android:id="@+id/btCloseResults"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/lblBack"
            android:background="#00000000"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/lblExperiment"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_chart" />

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblResults"/>

        <ProgressBar    android:id="@+id/pbIndeterminateResultUpload"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_results" />

</LinearLayout>
