<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.devbaltasarq.varse.ui.performexperiment.PerformExperimentActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageButton android:id="@+id/btClosePerformExperiment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lblBack"
            android:background="#00000000"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <ImageButton android:id="@+id/btStartScan"
            android:padding="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lblStartScan"
            android:background="#00000000"
            app:srcCompat="@drawable/ic_scan" />


        <ImageButton android:id="@+id/btStopScan"
            android:padding="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lblStopScan"
            android:background="#00000000"
            app:srcCompat="@drawable/ic_stop_scan" />

        <ImageView
            android:padding="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_ecg"/>

        <TextView
            android:padding="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <TextView
            android:padding="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblPerformExperiment"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_perform_experiment" />
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fbPerformExperiment"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:tint="#ffffff"
        app:srcCompat="@drawable/ic_launch_button"
        android:layout_gravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>
