<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.showresult.ResultViewerActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageButton
                android:id="@+id/btCloseResultViewer"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/lblBack"
                android:background="#00000000"
                app:srcCompat="?attr/actionModeCloseDrawable" />

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:contentDescription="@string/lblResults"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_chart" />

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblResult"/>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton         android:id="@+id/btGraphic"
            app:srcCompat="@drawable/ic_chart_button"
            app:backgroundTint="#00000000"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/lblGraphic"/>

        <ImageButton         android:id="@+id/btData"
            app:srcCompat="@drawable/ic_data_button"
            app:backgroundTint="#00000000"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/lblData" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="22dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView  android:id="@+id/ivChartViewer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/lblResult" />

                    <TextView   android:id="@+id/lblTextData"
                            android:padding="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="gone" />

                </FrameLayout>
            </ScrollView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
