<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.devbaltasarq.varse.ui.TemplatesActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageButton
            android:id="@+id/btCloseTemplates"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/lblBack"
            android:background="#00000000"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/lblTemplates"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_template" />

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTemplates"/>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardUseCompatPadding="true"
        android:padding="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView   android:id="@+id/lblNoEntries"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lblNoEntries"/>

            <ListView   android:id="@+id/lvTemplates"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
